--- a/src/dialog/Dialog.module.css
+++ b/src/dialog/Dialog.module.css
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .dialogContent {
